# cs3211-scheduler-rust

./: Cargo.toml  NOTES  test-all.sh
bonus/: main.rs  old_task_serial_dfs.rs  task.rs
implementations/: task.rs  threadpool-channel.rs  threadpool-try_channel.rs
logs/: test-log
other_implementations/bonus/: serial_dfs.rs  threadpool_dfs.rs
other_implementations/task_runner/: threadpool-mutex.rs
src/: main.rs
